--- a/test/fixtures/bet_odds.yml.erb
+++ b/test/fixtures/bet_odds.yml.erb
@@ -6,6 +6,12 @@ moneyline_unplayed:
   team_id: <%= Team[1].id %>
   type: 'MoneylineOdd'
 
+moneyline_underdog:
+  game: game
+  odds: 220
+  team_id: <%= Team[1].id %>
+  type: 'MoneylineOdd'
+
 moneyline_won:
   game: completed_game
   odds: -110
